--- a/Business/AndroidBusiness/build.gradle
+++ b/Business/AndroidBusiness/build.gradle
@@ -85,6 +85,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["kotlinxCoroutinesCore"])
     implementation(rootProject.ext.dependencies["kotlinxCoroutinesAndroid"])
     implementation project(path: ':AppStateLib')
-
-
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
+    implementation 'com.github.yangchong211.YCDialog:BaseDialog:3.6.8'
 }
