--- a/CommonLib/AppInitApi/build.gradle
+++ b/CommonLib/AppInitApi/build.gradle
@@ -1,9 +1,23 @@
 apply plugin: 'com.android.library'
+apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
 apply plugin: 'com.github.dcendents.android-maven'
 
+android {
+    compileSdkVersion rootProject.ext.android["compileSdkVersion"]
+    //buildToolsVersion rootProject.ext.android["buildToolsVersion"]
 
-sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+    defaultConfig {
+        minSdkVersion rootProject.ext.android["minSdkVersion"]
+        targetSdkVersion rootProject.ext.android["targetSdkVersion"]
+        versionCode rootProject.ext.android["versionCode"]
+        versionName rootProject.ext.android["versionName"]
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
 
 dependencies {
     compileOnly 'com.android.support:support-v4:28.0.0'
