--- a/Business/AnimBusiness/build.gradle
+++ b/Business/AnimBusiness/build.gradle
@@ -71,6 +71,6 @@ dependencies {
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
     //implementation project(path: ':ServiceLoaderAnnotations')
     //annotationProcessor project(path: ':api-compiler')
-
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
     api project(path: ':BusinessInterface')
 }
