--- a/Business/DemoBusiness/build.gradle
+++ b/Business/DemoBusiness/build.gradle
@@ -82,7 +82,8 @@ dependencies {
 
     implementation 'com.github.yangchong211.YCAppTool:ServiceLoaderApi:1.4.3'
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
-
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
+    implementation 'com.github.yangchong211.YCDialog:DialogFragment:3.6.8'
 
     api project(path: ':BusinessInterface')
 }
