--- a/Business/AnimBusiness/build.gradle
+++ b/Business/AnimBusiness/build.gradle
@@ -73,4 +73,5 @@ dependencies {
     //annotationProcessor project(path: ':api-compiler')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
     api project(path: ':BusinessInterface')
+    implementation project(path: ':ToolUtilsLib')
 }
