--- a/Business/DemoBusiness/build.gradle
+++ b/Business/DemoBusiness/build.gradle
@@ -84,6 +84,6 @@ dependencies {
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
     implementation 'com.github.yangchong211.YCDialog:DialogFragment:3.6.8'
-
+    implementation project(path: ':ToolUtilsLib')
     api project(path: ':BusinessInterface')
 }
