--- a/CommonLib/LibraryLayer/src/main/AndroidManifest.xml
+++ b/CommonLib/LibraryLayer/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
 
     <application>
-        <activity android:name="com.ycbjie.library.com.yc.library.web.WebViewActivity"/>
+        <activity android:name="com.yc.library.web.WebViewActivity"/>
     </application>
 
 </manifest>
