--- a/ServerLib/ImageServer/build.gradle
+++ b/ServerLib/ImageServer/build.gradle
@@ -39,8 +39,8 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(rootProject.ext.dependencies["appcompat"])
-    implementation rootProject.ext.dependencies["utilcode"]
     implementation rootProject.ext.dependencies["glide"]
     annotationProcessor rootProject.ext.dependencies["glide-compiler"]
     implementation rootProject.ext.dependencies["okhttp"]
+    implementation project(path: ':ToolUtilsLib')
 }
