--- a/MonitorLib/MonitorCrashLib/src/main/AndroidManifest.xml
+++ b/MonitorLib/MonitorCrashLib/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         <activity
             android:name=".crash.CrashTestActivity"
             android:screenOrientation="portrait"/>
+        <provider
+            android:name="com.yc.baseclasslib.activity.BaseProvider"
+            android:authorities="${applicationId}.baseProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
