--- a/CommonLib/AppRestartLIb/build.gradle
+++ b/CommonLib/AppRestartLIb/build.gradle
@@ -27,4 +27,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["annotation"]
+    implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':BaseClassLib')
 }
