--- a/CommonLib/AppLogLib/build.gradle
+++ b/CommonLib/AppLogLib/build.gradle
@@ -27,4 +27,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["annotation"]
+    implementation project(path: ':ToolUtilsLib')
 }
