--- a/Business/AndroidBusiness/build.gradle
+++ b/Business/AndroidBusiness/build.gradle
@@ -88,4 +88,5 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
     implementation 'com.github.yangchong211.YCDialog:BaseDialog:3.6.8'
     implementation project(path: ':LocalShareLib')
+    implementation project(path: ':SafeIntentLib')
 }
