--- a/settings.gradle
+++ b/settings.gradle
@@ -45,7 +45,7 @@ project(':LogUpload').projectDir = new File('ServerLib/LogUpload')
 include ':LibraryLayer', ':ConfigLayer', ':AppStatusLib',':ToolUtilsLib',
         'ComponentLib',':ApplicationLib',':AppStartLib',':AppBaseStore',
         ':BaseClassLib',':ReflectionLib',':AppInitApi',':AppInitCommon',
-        ':AppInitCompiler',':AppLogLib',':AppRestartLib'
+        ':AppInitCompiler',':AppLogLib',':AppRestartLib', ':SafeIntentLib'
 project(':LibraryLayer').projectDir = new File('CommonLib/LibraryLayer')
 project(':ConfigLayer').projectDir = new File('CommonLib/ConfigLayer')
 project(':AppStatusLib').projectDir = new File('CommonLib/AppStatusLib')
@@ -61,7 +61,7 @@ project(':AppInitCommon').projectDir = new File('CommonLib/AppInitCommon')
 project(':AppInitCompiler').projectDir = new File('CommonLib/AppInitCompiler')
 project(':AppLogLib').projectDir = new File('CommonLib/AppLogLib')
 project(':AppRestartLib').projectDir = new File('CommonLib/AppRestartLib')
-
+project(':SafeIntentLib').projectDir = new File('CommonLib/SafeIntentLib')
 
 
 /* +++++++++ 框架view基础组件层 +++++++++ */
