--- a/CommonLib/SafeIntentLib/build.gradle
+++ b/CommonLib/SafeIntentLib/build.gradle
@@ -1,10 +1,12 @@
-apply plugin: 'com.android.library'
+plugins {
+    id 'com.android.library'
+}
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
+
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     //buildToolsVersion rootProject.ext.android["buildToolsVersion"]
-
     defaultConfig {
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
@@ -26,7 +28,5 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation rootProject.ext.dependencies["appcompat"]
-    implementation rootProject.ext.dependencies["annotation"]
-
+    implementation(rootProject.ext.dependencies["annotation"])
 }
