--- a/Business/VideoBusiness/build.gradle
+++ b/Business/VideoBusiness/build.gradle
@@ -75,5 +75,6 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
     implementation project(path: ':ToolUtilsLib')
     api project(path: ':BusinessInterface')
+    implementation project(path: ':BaseClassLib')
 }
 
