--- a/app/build.gradle
+++ b/app/build.gradle
@@ -251,6 +251,7 @@ dependencies {
     implementation project(path: ':AppTraceTool')
     implementation project(path: ':AppLogLib')
     implementation project(path: ':OkHttpBusiness')
+    implementation project(path: ':BleBusiness')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
