--- a/CommonLib/AppRestartLIb/build.gradle
+++ b/CommonLib/AppRestartLIb/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':BaseClassLib')
+    implementation project(path: ':ActivityManager')
 }
