--- a/ServerLib/LogUpload/src/main/AndroidManifest.xml
+++ b/ServerLib/LogUpload/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application>
+        <service android:name="com.yc.logupload.task.UploadService" />
+
         <provider
             android:name="com.yc.logupload.config.UploadInitProvider"
             android:authorities="${applicationId}.UploadInitProvider"
