--- a/ServerLib/XlogServer/build.gradle
+++ b/ServerLib/XlogServer/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation rootProject.ext.dependencies["gson"]
     implementation(rootProject.ext.dependencies["roomRuntime"])
     annotationProcessor(rootProject.ext.dependencies["roomCompiler"])
+    implementation project(path: ':ToolUtilsLib')
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.7'
 }
