--- a/app/build.gradle
+++ b/app/build.gradle
@@ -235,8 +235,8 @@ dependencies {
 //    implementation project(path: ':LeakCanarySdk')
     implementation(rootProject.ext.dependencies["AutoCloserLib"])
     //implementation project(path: ':AutoCloserLib')
-    implementation(rootProject.ext.dependencies["AppStartLib"])
-    //implementation project(path: ':AppStartLib')
+//    implementation(rootProject.ext.dependencies["AppStartLib"])
+    implementation project(path: ':AppStartLib')
     implementation project(path: ':MvpTodoBusiness')
     implementation project(path: ':MvvmDatabinding')
     implementation project(path: ':MvvmTodoLive')
