--- a/MonitorLib/MonitorFileLib/build.gradle
+++ b/MonitorLib/MonitorFileLib/build.gradle
@@ -36,4 +36,7 @@ dependencies {
     implementation 'com.github.yangchong211.YCRefreshView:EastAdapterLib:3.0.2'
     //状态栏：https://github.com/yangchong211/YCStatusBar
     implementation 'com.github.yangchong211.YCStatusBar:StatusBarLib:1.4.6'
+    //轻量级异步线程封装库
+    implementation 'com.github.yangchong211.YCThreadPool:ThreadPoolLib:1.3.7'
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
 }
