--- a/Business/BleBusiness/build.gradle
+++ b/Business/BleBusiness/build.gradle
@@ -29,6 +29,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
+    implementation(rootProject.ext.dependencies["recyclerview"])
     implementation project(path: ':EasyBleServer')
     implementation project(path: ':ToolUtilsLib')
     implementation project(path: ':AppLogLib')
