--- a/Business/CommonBusiness/build.gradle
+++ b/Business/CommonBusiness/build.gradle
@@ -1,24 +1,21 @@
 apply plugin: 'com.android.library'
-apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     //buildToolsVersion rootProject.ext.android["buildToolsVersion"]
-
     defaultConfig {
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
     }
-
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -29,7 +26,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
+    //公共类
+    implementation project(path: ':BaseClassLib')
+    implementation project(path: ':ComponentLib')
     implementation project(path: ':ToolUtilsLib')
-    //腾讯mmkv库
-    implementation "com.tencent:mmkv-static:1.2.7"
+    implementation project(path: ':ActivityManager')
+    implementation project(path: ':AppBaseStore')
+    implementation project(path: ':AppLogLib')
+    implementation project(path: ':AppRestartLib')
+    implementation project(path: ':SafeIntentLib')
 }
