--- a/app/build.gradle
+++ b/app/build.gradle
@@ -253,6 +253,8 @@ dependencies {
     implementation project(path: ':AppLogLib')
     implementation project(path: ':OkHttpBusiness')
     implementation project(path: ':BleBusiness')
+    implementation project(path: ':AppBaseStore')
+    implementation project(path: ':CommonBusiness')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
