--- a/settings.gradle
+++ b/settings.gradle
@@ -5,8 +5,8 @@ include ':app'
 /* +++++++++ 业务组件层 +++++++++ */
 include ':GameBusiness', ':AnimBusiness',':LeetBusiness',':MvvmDatabinding',
         ':VideoBusiness', ':DemoBusiness', ':MvpTodoBusiness',':MvvmTodoLive',
-        ':MvcTodoBusiness',':JetpackBusiness',':AndroidBusiness',
-        ':BusinessInterface', ':StatusBusiness', ':OkHttpBusiness', ':BleBusiness'
+        ':MvcTodoBusiness',':JetpackBusiness',':AndroidBusiness',':CommonBusiness',
+        ':BusinessInterface', ':StatusBusiness', ':OkHttpBusiness',':BleBusiness'
 project(':GameBusiness').projectDir = new File('Business/GameBusiness')
 project(':AndroidBusiness').projectDir = new File('Business/AndroidBusiness')
 project(':JetpackBusiness').projectDir = new File('Business/JetpackBusiness')
@@ -22,6 +22,7 @@ project(':BusinessInterface').projectDir = new File('Business/BusinessInterface'
 project(':StatusBusiness').projectDir = new File('Business/StatusBusiness')
 project(':OkHttpBusiness').projectDir = new File('Business/OkHttpBusiness')
 project(':BleBusiness').projectDir = new File('Business/BleBusiness')
+project(':CommonBusiness').projectDir = new File('Business/CommonBusiness')
 
 
 /* +++++++++ 框架业务服务层 +++++++++ */
