--- a/ToolLib/ThreadTaskLib/build.gradle
+++ b/ToolLib/ThreadTaskLib/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation(rootProject.ext.dependencies["EasyExecutor"])
+    implementation project(path: ':EasyExecutor')
 }
