--- a/CommonLib/AppBaseStore/src/main/AndroidManifest.xml
+++ b/CommonLib/AppBaseStore/src/main/AndroidManifest.xml
@@ -1,4 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.store">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <application>
+
+    </application>
+
 </manifest>
