--- a/app/build.gradle
+++ b/app/build.gradle
@@ -255,6 +255,7 @@ dependencies {
     implementation project(path: ':BleBusiness')
     implementation project(path: ':AppBaseStore')
     implementation project(path: ':CommonBusiness')
+    implementation project(path: ':ThreadBusiness')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
@@ -265,7 +266,7 @@ dependencies {
 
     implementation 'com.github.yangchong211.YCDialog:DialogLib:3.6.8'
     implementation 'com.github.yangchong211.YCDialog:PopupWindow:3.6.8'
-    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.8'
+    implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
     implementation 'com.github.yangchong211.YCDialog:SnackBar:3.6.8'
     implementation 'com.github.yangchong211.YCDialog:DialogFragment:3.6.8'
     implementation 'com.github.yangchong211.YCDialog:BaseDialog:3.6.8'
