--- a/Business/DemoBusiness/build.gradle
+++ b/Business/DemoBusiness/build.gradle
@@ -88,4 +88,7 @@ dependencies {
     implementation 'com.github.yangchong211.YCDialog:DialogFragment:3.6.8'
     implementation project(path: ':ToolUtilsLib')
     api project(path: ':BusinessInterface')
+
+    implementation project(path: ':AppInitCommon')
+    implementation project(path: ':AppInitApi')
 }
