--- a/Business/CommonBusiness/build.gradle
+++ b/Business/CommonBusiness/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     implementation project(path: ':AppLogLib')
     implementation project(path: ':AppRestartLib')
     implementation project(path: ':SafeIntentLib')
+
+    implementation project(path: ':AppInitCommon')
+    implementation project(path: ':AppInitApi')
 }
