--- a/CommonLib/AppInitApi/build.gradle
+++ b/CommonLib/AppInitApi/build.gradle
@@ -20,6 +20,8 @@ android {
 }
 
 dependencies {
-    compileOnly 'com.android.support:support-v4:28.0.0'
+    //compileOnly 'com.android.support:support-v4:28.0.0'
+    implementation rootProject.ext.dependencies["appcompat"]
+    implementation rootProject.ext.dependencies["annotation"]
     api project(':AppInitCommon')
 }
