--- a/ToolLib/AppProcessLib/build.gradle
+++ b/ToolLib/AppProcessLib/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation(rootProject.ext.dependencies["lifecycleRuntime"])
     implementation(rootProject.ext.dependencies["EasyExecutor"])
 }
