--- a/ToolLib/AppProcessLib/src/main/AndroidManifest.xml
+++ b/ToolLib/AppProcessLib/src/main/AndroidManifest.xml
@@ -2,4 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.appprocesslib">
 
+    <application>
+        <provider
+            android:name="com.yc.appprocesslib.ProcessInitializer"
+            android:authorities="${applicationId}.ProcessInitializer"
+            android:exported="false" />
+    </application>
+
 </manifest>
