--- a/app/build.gradle
+++ b/app/build.gradle
@@ -256,6 +256,7 @@ dependencies {
     implementation project(path: ':AppBaseStore')
     implementation project(path: ':CommonBusiness')
     implementation project(path: ':ThreadBusiness')
+    implementation project(path: ':NotifyBusiness')
     annotationProcessor 'com.github.yangchong211.YCAppTool:ServiceLoaderProcessor:1.4.3'
 //    implementation 'com.github.yangchong211.YCAppTool:BlurViewLib:1.3.7'
 //    implementation 'com.github.yangchong211.YCAppTool:BannerViewLib:1.3.7'
