--- a/Business/NotifyBusiness/src/main/AndroidManifest.xml
+++ b/Business/NotifyBusiness/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.yc.cn.ycnotification">
+    package="com.yc.ycnotification">
 
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application>
         <activity android:name="com.yc.ycnotification.NotifyHomeActivity"/>
         <activity android:name="com.yc.ycnotification.NotificationActivity"/>
-        <activity android:name="com.yc.ycnotification.TestActivity"/>
+        <activity android:name="com.yc.ycnotification.NotifyIntentActivity"/>
+        <activity android:name="com.yc.ycnotification.NotifyActivity"/>
         <activity android:name="com.yc.ycnotification.service.ServiceActivity"/>
         <receiver android:name="com.yc.ycnotification.ReminderReceiver"/>
         <service android:name="com.yc.ycnotification.service.MyService"
